@@ -13,9 +13,9 @@
 ### BEGIN INIT INFO
 # Provides:            
 # Required-Start:      $network
-# Should-Start:
+# Should-Start:        firewalld iptables nftables
 # Required-Stop:       $network
-# Should-Stop:
+# Should-Stop:         firewalld nftables
 # Default-Start:       3 4 5
 # Default-Stop:        0 1 2 6
 # Short-Description:   Starts the wicd daemon.
